--- a/synchronizo/views/public/room.html
+++ b/synchronizo/views/public/room.html
@@ -84,21 +84,12 @@ wavesurfer.on('ready', function () {
                     <button onclick="wavesurfer.pause()" type="button" class="btn btn-primary btn-large" aria-label="Pause">
                         <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
                     </button>
-<<<<<<< HEAD
-                    <button class="btn btn-primary btn-large">
-                        <a href="/upload"
-                            <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
-                        </a>
-                        <a href="/upload"
-                            <b>Add Music</b>
-                        </a>
-=======
+                    <!-- Still need to implement Fast-Backward -->
                     <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span>
                     </button>
                     <button id="upload-button" class="btn btn-info btn-large">
                         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <b>Add Music</b>
->>>>>>> upstream/master
                     </button>
                 </div>
 
