Need to Change the buttons in room to update ALL users, not one

--- a/synchronizo/views/public/room.html
+++ b/synchronizo/views/public/room.html
@@ -78,6 +78,7 @@ wavesurfer.on('ready', function () {
                     <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
                     </button>
+                    <!-- These need to be changed. They currently only update the client who pressed them -->
                     <button onclick="wavesurfer.play()" type="button" class="btn btn-primary btn-large" aria-label="Play">
                         <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
                     </button>
