--- a/synchronizo/views/public/room.html
+++ b/synchronizo/views/public/room.html
@@ -29,6 +29,11 @@ wavesurfer.on('ready', function () {
 });
 </script>
 
+<script>
+function PlayCtrl() {
+    var socket = io();
+}
+</script>
 {% endblock %}
 
 {% block content %}
@@ -73,27 +78,18 @@ wavesurfer.on('ready', function () {
             </div>
         </div>
 
-        <div class="row">
+        <div class="row" ng-app="myApp">
             <div class="col-md-4 text-center">
-                <div class="btn-group" role="group" aria-label="...">
+                <div ng-controller="myCtrl" class="btn-group" role="group" aria-label="...">
                     <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
                     </button>
-                    <!-- These need to be changed. They currently only update the client who pressed them
-                    <button onclick="wavesurfer.play()" type="button" class="btn btn-primary btn-large" aria-label="Play">
+                    <button onclick="socket.emit('play-all')" type="button" class="btn btn-primary btn-large" aria-label="Play">
                         <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
-                    </button> -->
-                    <button id="play-button" class="btn btn-primary btn-large" aria-label="Play">
-                        <span class="glyphicon glyphicon-play"aria-hidden="true"></span>
                     </button>
-                    <!-- Update pause for all users
                     <button onclick="wavesurfer.pause()" type="button" class="btn btn-primary btn-large" aria-label="Pause">
                         <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
-                    </button> -->
-                    <button id="pause-button" class="btn btn-primary btn-large" aria-label="Pause">
-                        <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
                     </button>
-                    <!-- Still need to implement Fast-Backward -->
                     <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span>
                     </button>
