--- a/synchronizo/views/public/room.html
+++ b/synchronizo/views/public/room.html
@@ -30,6 +30,7 @@ wavesurfer.on('ready', function () {
 </script>
 
 <script>
+// Necessary to allow buttons to send socket.emit()
 function PlayCtrl() {
     var socket = io();
 }
@@ -78,19 +79,20 @@ function PlayCtrl() {
             </div>
         </div>
 
-        <div class="row" ng-app="myApp">
+        <div class="row">
             <div class="col-md-4 text-center">
                 <div ng-controller="myCtrl" class="btn-group" role="group" aria-label="...">
-                    <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
+                    <!-- All buttons send an emit signal to the server except for upload, which is handled via script -->
+                    <button onclick="socket.emit('prevTrack-all')" type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-backward" aria-hidden="true"></span>
                     </button>
                     <button onclick="socket.emit('play-all')" type="button" class="btn btn-primary btn-large" aria-label="Play">
                         <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
                     </button>
-                    <button onclick="wavesurfer.pause()" type="button" class="btn btn-primary btn-large" aria-label="Pause">
+                    <button onclick="socket.emit('pause-all')" type="button" class="btn btn-primary btn-large" aria-label="Pause">
                         <span class="glyphicon glyphicon-pause" aria-hidden="true"></span>
                     </button>
-                    <button type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
+                    <button onclick="socket.emit('nextTrack-all')" type="button" class="btn btn-primary btn-large" aria-label="Fast-Backward">
                         <span class="glyphicon glyphicon-fast-forward" aria-hidden="true"></span>
                     </button>
                     <button id="upload-button" class="btn btn-info btn-large">
